@@ -1,3 +1,7 @@
+2007-07-29  Brian Gough  <bjg@network-theory.co.uk>
+
+	* lmset.c (set): ensure internal state is zeroed after a set
+
 2007-01-26  Brian Gough  <bjg@network-theory.co.uk>
 
 	* fsolver.c (gsl_multifit_fsolver_set): made vector argument x
